Update runtime and testing to JDK 24
Trino still works with JDK 23 but 24 is used for testing
and in the Docker images.

JDK 24 will become a requirement in future release.